<resources>
    <string name="app_name">MisContactos</string>
    <string name="nombre">Yudy Quimbayo</string>
    <string name="telefono">3133443106</string>
    <string name="email">yudy@gmail.com</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>