<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleContacto"
    android:orientation="vertical">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"/>

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="35sp" />

    <LinearLayout
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="llamar"
        android:orientation="horizontal"
        tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:id="@+id/imgTelefono"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@mipmap/llamada" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/telefono"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="enviarMail"
        android:orientation="horizontal"
        tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@mipmap/email" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/email"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>