<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvContacto"
    android:layout_width="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="120dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:src="@mipmap/gusta" />

            <LinearLayout
                android:layout_width="199dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNombreCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pnombre"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTelefonoCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ptelefono"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmailCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pemail"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>
